# server_ui

./: .env  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  QUICK_START.md  README.md  Rocket.toml  build.sh  dev.sh  kill-dev-servers.sh
.cargo/: config.toml
frontend/: .env.development  .env.example  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/bindings/: ArgumentType.ts  AuthResponse.ts  CommandBuilder.ts  CommandPart.ts  Condition.ts  ConditionOperator.ts  ConditionValue.ts  ConditionalRule.ts  DynamicField.ts  EnumConfig.ts  FieldConstraint.ts  GameConfig.ts  Login.ts  Minimum.ts  New.ts  NumberConfig.ts  SchemaMetadata.ts  ServerConfig.ts  StaticConfig.ts  StringConfig.ts  ValueFormatter.ts  index.ts
frontend/src/components/: AdminRequiredRoute.tsx  AuthenticatedRoute.tsx  Button.tsx  Card.tsx  CheckboxInput.tsx  Dropdown.tsx  ErrorMessage.tsx  Footer.tsx  FormCard.tsx  (+13 more)
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260116_203718_game_schema.rs  m20260118_003246_game_config.rs
migrations/: .gitkeep
src/: db.rs  main.rs  utils.rs
src/auth/: guards.rs  mod.rs  response.rs
src/controller/: health.rs  mod.rs
src/dto/: game_schema.rs  mod.rs  user.rs
src/entity/: game_config.rs  game_schema.rs  mod.rs  prelude.rs  user.rs
src/models/: user.rs
src/schema/: mod.rs  server_config.rs  validate_config.rs
src/service/: game_schema.rs  mod.rs  steamcmd.rs  user.rs
src/state/: mod.rs  steamcmd.rs
(+49 files in other folders)
