[package]
name = "server_ui"
version = "0.1.0"
edition = "2021"

[features]
default = []
local-dev = []

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rust-embed = "8.5.0"
mime_guess = "2.0.5"
serde_json = "1.0"
anyhow = { version = "1.0" }
thiserror = { version = "2.0" }
which = { version = "8" }
serde = { version = "1.0", features = ["derive"] }
