[package]
name = "server_ui"
version = "0.1.0"
edition = "2021"

[features]
default = []
local-dev = []

[workspace]
members = ["migration"]

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rust-embed = "8.5.0"
mime_guess = "2.0.5"
serde_json = "1.0"
anyhow = { version = "1.0" }
thiserror = { version = "2.0" }
which = { version = "8" }
serde = { version = "1.0", features = ["derive"] }
migration = { path = "./migration" }
rocket_ext = { version = "0.3" }

# Database
sea-orm = { version = "1.1", features = [
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite"] }

# Authentication
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
